# Continuous-Integration

./: README.md  main.py  pyproject.toml
.github/: ci.yml
.github/workflows/: ci.yml
mathlib/: __init__.py  basic_math.py
tests/: test_basic_math.py
