[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathlib-py"
version = "0.1.0"
description = "Libreria de matematica basica con pruebas unitarias"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0"
]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1"
